components/crud-web-apps/volumes/manifests/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: volumes-web-app-volumes-web-app
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /volumes
    match:
    - uri:
        prefix: /volumes/
    rewrite:
      uri: /
    route:
    - destination:
        # host: service.namespace.svc.clusterDomain — index 1 and 3 filled by replacements
        host: volumes-web-app-service.placeholder.svc.placeholder
        port:
          number: 80
